third_party/move/move-compiler-v2/tests/reference-safety/v1-borrow-tests/borrow_global_acquires_invalid_2.no-opt.exp

Diagnostics:
error: function acquires global `A::T1` which is currently mutably borrowed
   ┌─ tests/reference-safety/v1-borrow-tests/borrow_global_acquires_invalid_2.move:9:9
   │
 7 │         let x = borrow_global_mut<T1>(signer::address_of(account));
   │                 -------------------------------------------------- struct `A::T1` previously mutably borrowed here
 8 │         acquires_t2(account);
 9 │         acquires_t1(account);
   │         ^^^^^^^^^^^^^^^^^^^^ function called here
10 │         move x;
   │         ------ conflicting reference `x` used here
   ·
27 │     fun acquires_t1(account: &signer) acquires T1 {
   │                                                --- access declared here

error: function acquires global `A::T1` which is currently mutably borrowed
   ┌─ tests/reference-safety/v1-borrow-tests/borrow_global_acquires_invalid_2.move:16:9
   │
14 │         let x = borrow_global_mut<T1>(signer::address_of(account));
   │                 -------------------------------------------------- struct `A::T1` previously mutably borrowed here
15 │         acquires_t2(account);
16 │         acquires_t1(account);
   │         ^^^^^^^^^^^^^^^^^^^^ function called here
17 │         move x;
   │         ------ conflicting reference `x` used here
   ·
27 │     fun acquires_t1(account: &signer) acquires T1 {
   │                                                --- access declared here

error: function acquires global `A::T1` which is currently mutably borrowed
   ┌─ tests/reference-safety/v1-borrow-tests/borrow_global_acquires_invalid_2.move:22:9
   │
21 │         let x = borrow_global_mut<T1>(signer::address_of(account));
   │                 -------------------------------------------------- struct `A::T1` previously mutably borrowed here
22 │         acquires_t1(account);
   │         ^^^^^^^^^^^^^^^^^^^^ function called here
23 │         move x;
   │         ------ conflicting reference `x` used here
   ·
27 │     fun acquires_t1(account: &signer) acquires T1 {
   │                                                --- access declared here
